--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     docker:
       - image: circleci/golang:1.8
-      - image: neo4j:3.1.0-enterprise
+      - image: neo4j:3.2.2-enterprise
         environment:
           NEO4J_AUTH: none
           NEO4J_HEAP_MEMORY: 256
@@ -50,7 +50,7 @@ jobs:
           destination: build
 
   docker_build:
-    working_directory: /public-concordances-api
+    working_directory: /public-annotations-api
     docker:
       - image: docker:1.12.6-git
     steps:
