--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/golang:1.8
+      - image: circleci/golang:1.10.2
       - image: neo4j:3.2.2-enterprise
         environment:
           NEO4J_AUTH: none
@@ -13,46 +13,38 @@ jobs:
     environment:
           NEO4J_TEST_URL: "http://localhost:7474/db/data/"
           CIRCLE_TEST_REPORTS: /tmp/test-reports
-          CIRCLE_ARTIFACTS: /tmp/artifacts
-
+          CIRCLE_COVERAGE_REPORT: /tmp/coverage-results
     steps:
       - checkout
       - run:
-          name: Make go get work
-          command: sudo chown -R circleci:circleci /go/src
+          name: External dependencies
+          command: |
+            go get -u github.com/mattn/goveralls
+            go get -u github.com/jstemmer/go-junit-report
+            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
       - run:
-          name: Create test folder
-          command: mkdir -p $CIRCLE_TEST_REPORTS
-      - run: |
-          go get -u github.com/kardianos/govendor
-      - run: |
-          govendor sync
-      - run: |
-          go build -v
+          name: Make result folders
+          command: |
+            mkdir -p ${CIRCLE_TEST_REPORTS}
+            mkdir -p ${CIRCLE_COVERAGE_REPORT}
       - run:
-          wget --retry-connrefused --no-check-certificate -T 60 $NEO4J_TEST_URL; curl $NEO4J_TEST_URL
-      - run: |
-          go get -u github.com/jstemmer/go-junit-report
-          go get -u github.com/mattn/goveralls
-          wget https://raw.githubusercontent.com/Financial-Times/cookiecutter-upp-golang/master/coverage.sh && chmod +x coverage.sh
-      - run: |
-          mkdir -p $CIRCLE_TEST_REPORTS/golang
-          mkdir -p $CIRCLE_ARTIFACTS
-          govendor test -race -v +local | go-junit-report > $CIRCLE_TEST_REPORTS/golang/junit.xml
-          ./coverage.sh
-      - run: |
-          goveralls -coverprofile=$CIRCLE_ARTIFACTS/coverage.out -service=circle-ci -repotoken=$COVERALLS_TOKEN
+          name: Download vendored dependencies
+          command: dep ensure -v -vendor-only
+      - run:
+          name: Go build
+          command: go build -v
+      - run:
+          name: Run tests
+          command: go test -race -cover -coverprofile=${CIRCLE_COVERAGE_REPORT}/coverage.out ./... | go-junit-report > ${CIRCLE_TEST_REPORTS}/junit.xml
+      - run:
+          name: Upload coverage
+          command: goveralls -coverprofile=${CIRCLE_COVERAGE_REPORT}/coverage.out -service=circle-ci -repotoken=${COVERALLS_TOKEN}
       - store_test_results:
-          path: /tmp/test-reports
-
-      - store_artifacts:
-          path: /tmp/artifacts
-          destination: build
-
+          path: /tmp/test-results
   docker_build:
     working_directory: /public-annotations-api
     docker:
-      - image: docker:1.12.6-git
+      - image: docker:18.03
     steps:
       - checkout
       - setup_docker_engine
