:green_heart: Fix CircleCI build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,8 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/golang:1.8
-      - image: neo4j:3.2.2-enterprise
+      - image: circleci/golang:1.10
+      - image: neo4j:3.2.7-enterprise
         environment:
           NEO4J_AUTH: none
           NEO4J_HEAP_MEMORY: 256
@@ -13,7 +13,7 @@ jobs:
     environment:
           NEO4J_TEST_URL: "http://localhost:7474/db/data/"
           CIRCLE_TEST_REPORTS: /tmp/test-reports
-          CIRCLE_ARTIFACTS: /tmp/artifacts
+          CIRCLE_COVERAGE_REPORT: /tmp/coverage-results
 
     steps:
       - checkout
@@ -22,37 +22,32 @@ jobs:
           command: sudo chown -R circleci:circleci /go/src
       - run:
           name: Create test folder
-          command: mkdir -p $CIRCLE_TEST_REPORTS
+          command: |
+            mkdir -p ${CIRCLE_TEST_REPORTS}
+            mkdir -p ${CIRCLE_COVERAGE_REPORT}
+      - run:
+          name: External Dependancies
+          command: |
+            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+            go get -u github.com/jstemmer/go-junit-report
+            go get -u github.com/mattn/goveralls
       - run: |
-          curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-      - run: |
-          dep ensure -vendor-only
+          dep ensure -v -vendor-only
       - run: |
           go build -v
       - run:
           wget --retry-connrefused --no-check-certificate -T 60 $NEO4J_TEST_URL; curl $NEO4J_TEST_URL
       - run: |
-          go get -u github.com/jstemmer/go-junit-report
-          go get -u github.com/mattn/goveralls
-          wget https://raw.githubusercontent.com/Financial-Times/cookiecutter-upp-golang/master/coverage.sh && chmod +x coverage.sh
+          go test ./... -v -race -cover -coverprofile=$CIRCLE_COVERAGE_REPORT/coverage.out | go-junit-report > $CIRCLE_TEST_REPORTS/junit.xml
       - run: |
-          mkdir -p $CIRCLE_TEST_REPORTS/golang
-          mkdir -p $CIRCLE_ARTIFACTS
-          govendor test -race -v +local | go-junit-report > $CIRCLE_TEST_REPORTS/golang/junit.xml
-          ./coverage.sh
-      - run: |
-          goveralls -coverprofile=$CIRCLE_ARTIFACTS/coverage.out -service=circle-ci -repotoken=$COVERALLS_TOKEN
+          goveralls -coverprofile=$CIRCLE_COVERAGE_REPORT/coverage.out -service=circle-ci -repotoken=$COVERALLS_TOKEN
       - store_test_results:
           path: /tmp/test-reports
-
-      - store_artifacts:
-          path: /tmp/artifacts
-          destination: build
 
   docker_build:
     working_directory: /public-annotations-api
     docker:
-      - image: docker:1.12.6-git
+      - image: docker:18.03
     steps:
       - checkout
       - setup_docker_engine
