--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -27,7 +27,7 @@
 
 [[constraint]]
   name = "github.com/Financial-Times/annotations-rw-neo4j"
-  version = "2.1.0"
+  version = "2.2.1"
 
 [[constraint]]
   name = "github.com/Financial-Times/base-ft-rw-app-go"
@@ -35,15 +35,11 @@
 
 [[constraint]]
   name = "github.com/Financial-Times/concepts-rw-neo4j"
-  version = "1.1.5"
+  version = "1.9.0"
 
 [[constraint]]
   name = "github.com/Financial-Times/content-rw-neo4j"
   version = "2.0.0"
-
-[[constraint]]
-  name = "github.com/Financial-Times/financial-instruments-rw-neo4j"
-  version = "0.0.9"
 
 [[constraint]]
   name = "github.com/Financial-Times/go-fthealth"
@@ -51,27 +47,15 @@
 
 [[constraint]]
   name = "github.com/Financial-Times/go-logger"
-  version = "0.0.2"
+  version = "0.0.4"
 
 [[constraint]]
   name = "github.com/Financial-Times/http-handlers-go"
   version = "0.1.1"
 
 [[constraint]]
-  name = "github.com/Financial-Times/neo-model-utils-go"
-  version = "0.2.0"
-
-[[constraint]]
   name = "github.com/Financial-Times/neo-utils-go"
   version = "1.0.2"
-
-[[constraint]]
-  name = "github.com/Financial-Times/organisations-rw-neo4j"
-  version = "0.5.9"
-
-[[constraint]]
-  name = "github.com/Financial-Times/people-rw-neo4j"
-  version = "2.0.0"
 
 [[constraint]]
   name = "github.com/Financial-Times/service-status-go"
@@ -86,8 +70,9 @@
   version = "1.0.1"
 
 [[constraint]]
-  branch = "master"
+  branch = "refactor/bring-to-date"
   name = "github.com/jmcvetta/neoism"
+  source = "github.com/Financial-Times/neoism"
 
 [[constraint]]
   name = "github.com/stretchr/testify"
