--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,34 @@ jobs:
           goveralls -coverprofile=$CIRCLE_COVERAGE_REPORT/coverage.out -service=circle-ci -repotoken=$COVERALLS_TOKEN
       - store_test_results:
           path: /tmp/test-reports
-
+          
+  dredd:
+    working_directory: /go/src/github.com/Financial-Times/public-annotations-api
+    docker:
+      - image: bankrs/golang-dredd:go1.10.0-dredd5.0.0
+        environment:
+          GOPATH: /go
+          NEO4J_TEST_URL: "http://localhost:7474/db/data/"
+    steps:
+      - checkout
+      - run:
+          name: External Dependencies
+          command: |
+            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+            go get -u github.com/mattn/goveralls
+            go get -u github.com/jstemmer/go-junit-report
+      - run:
+          name: Load ersatz-fixtures.yml to ersatz image
+          command: "curl -X POST --data-binary @_ft/ersatz-fixtures.yml -H \"Content-type: text/x-yaml\" http://localhost:9000/__configure"
+      - run:
+          name: Import libraries
+          command: dep ensure -v -vendor-only
+      - run:
+          name: Go Build
+          command: go build -v
+      - run:
+          name: Dredd API Testing
+          command: dredd
   docker_build:
     working_directory: /public-annotations-api
     docker:
