--- a/_ft/api.yml
+++ b/_ft/api.yml
@@ -33,33 +33,88 @@ paths:
           description: Returns the Brand concept if it's found.
           examples:
             application/json:
+              - predicate: http://www.ft.com/ontology/annotation/mentions
+                id: http://api.ft.com/things/12a18b0f-98cf-35a4-87fd-2b45450bee65
+                apiUrl: http://api.ft.com/people/12a18b0f-98cf-35a4-87fd-2b45450bee65
+                types:
+                  - http://www.ft.com/ontology/core/Thing
+                  - http://www.ft.com/ontology/concept/Concept
+                  - http://www.ft.com/ontology/person/Person
+                prefLabel: Alan Ruskin
               - predicate: http://www.ft.com/ontology/classification/isClassifiedBy
-                id: http://api.ft.com/things/ff691bf8-8d92-2a2a-8326-c273400bff0b
-                apiUrl: http://api.ft.com/brands/ff691bf8-8d92-2a2a-8326-c273400bff0b
+                id: http://api.ft.com/things/5c7592a8-1f0c-11e4-b0cb-b2227cce2b54
+                apiUrl: http://api.ft.com/brands/5c7592a8-1f0c-11e4-b0cb-b2227cce2b54
                 types:
                   - http://www.ft.com/ontology/core/Thing
                   - http://www.ft.com/ontology/concept/Concept
                   - http://www.ft.com/ontology/classification/Classification
-                  - http://www.ft.com/ontology/Brand
-                prefLabel: Child Business School video
-              - predicate: http://www.ft.com/ontology/classification/isClassifiedBy
-                id: http://api.ft.com/things/ff691bf8-8d92-2a2a-8326-c273400bff0b
-                apiUrl: http://api.ft.com/brands/ff691bf8-8d92-2a2a-8326-c273400bff0b
+                  - http://www.ft.com/ontology/product/Brand
+                prefLabel: fastFT
+              - predicate: http://www.ft.com/ontology/classification/isPrimarilyClassifiedBy
+                id: http://api.ft.com/things/128ff9cd-e828-3369-815b-ae73f51c0a43
+                apiUrl: http://api.ft.com/things/128ff9cd-e828-3369-815b-ae73f51c0a43
                 types:
                   - http://www.ft.com/ontology/core/Thing
                   - http://www.ft.com/ontology/concept/Concept
                   - http://www.ft.com/ontology/classification/Classification
-                  - http://www.ft.com/ontology/Brand
-                prefLabel: Business School video
+                  - http://www.ft.com/ontology/Section
+                prefLabel: Front page
               - predicate: http://www.ft.com/ontology/classification/isClassifiedBy
-                id: http://api.ft.com/things/ff691bf8-8d92-2a2a-8326-c273400bff0b
-                apiUrl: http://api.ft.com/brands/ff691bf8-8d92-2a2a-8326-c273400bff0b
+                id: http://api.ft.com/things/9b40e89c-e87b-3d4f-b72c-2cf7511d2146
+                apiUrl: "http://api.ft.com/things/9b40e89c-e87b-3d4f-b72c-2cf7511d2146"
                 types:
                   - http://www.ft.com/ontology/core/Thing
                   - http://www.ft.com/ontology/concept/Concept
                   - http://www.ft.com/ontology/classification/Classification
-                  - http://www.ft.com/ontology/Brand
-                prefLabel: Financial Times
+                  - http://www.ft.com/ontology/Genre
+                  - prefLabel: News
+              - predicate: http://www.ft.com/ontology/annotation/mentions
+                id: http://api.ft.com/things/f8f06886-4ee6-4be5-9550-7d9ddef3920f
+                apiUrl: http://api.ft.com/organisations/f8f06886-4ee6-4be5-9550-7d9ddef3920f
+                types:
+                  - http://www.ft.com/ontology/core/Thing
+                  - http://www.ft.com/ontology/concept/Concept
+                  - http://www.ft.com/ontology/organisation/Organisation
+                leiCode: ECTRVYYCEF89VWYS6K36
+                prefLabel: Treasury UK
+              - predicate: http://www.ft.com/ontology/annotation/mentions
+                id: http://api.ft.com/things/03789e6f-98b6-4c17-9933-e721af909638
+                apiUrl: http://api.ft.com/organisations/03789e6f-98b6-4c17-9933-e721af909638
+                types:
+                  - http://www.ft.com/ontology/core/Thing
+                  - http://www.ft.com/ontology/concept/Concept
+                  - http://www.ft.com/ontology/organisation/Organisation
+                  - http://www.ft.com/ontology/company/Company
+                  - http://www.ft.com/ontology/company/PublicCompany
+                leiCode: 7LTWFZYICNSX8D621K86
+                FIGI: BBG000BBZTH2
+                prefLabel: Deutsche Bank AG
+              - predicate: http://www.ft.com/ontology/annotation/mentions
+                id: http://api.ft.com/things/618452ab-13c0-400f-827c-d649cab2315c
+                apiUrl: http://api.ft.com/organisations/618452ab-13c0-400f-827c-d649cab2315c
+                types:
+                  - http://www.ft.com/ontology/core/Thing
+                  - http://www.ft.com/ontology/concept/Concept
+                  - http://www.ft.com/ontology/organisation/Organisation
+                leiCode: 549300B56MD0ZC402L06
+                prefLabel: Bloomberg LP
+              - predicate: http://www.ft.com/ontology/annotation/mentions
+                id: http://api.ft.com/things/713c342a-b2e3-3fad-b6ef-6a7aa40445d6
+                apiUrl: http://api.ft.com/people/713c342a-b2e3-3fad-b6ef-6a7aa40445d6
+                types:
+                  - http://www.ft.com/ontology/core/Thing
+                  - http://www.ft.com/ontology/concept/Concept
+                  - http://www.ft.com/ontology/person/Person
+                prefLabel: Aaron Kohli
+              - predicate: http://www.ft.com/ontology/implicitlyClassifiedBy
+                id: http://api.ft.com/things/dbb0bdae-1f0c-11e4-b0cb-b2227cce2b54
+                apiUrl: http://api.ft.com/brands/dbb0bdae-1f0c-11e4-b0cb-b2227cce2b54
+                types:
+                  - http://www.ft.com/ontology/core/Thing
+                  - http://www.ft.com/ontology/concept/Concept
+                  - http://www.ft.com/ontology/classification/Classification
+                  - http://www.ft.com/ontology/product/Brand
+                  - prefLabel: Financial Times
         400:
           description: Bad request if the uuid path parameter is  formatted formed or missing.
         404:
