--- a/_ft/api.yml
+++ b/_ft/api.yml
@@ -129,7 +129,7 @@ paths:
         400:
           description: Bad request if the uuid path parameter is malformed or missing, or if the lifecycle query parameter value is not valid.
         404:
-          description: Not Found if there is no annotations record for the uuid path parameter is found.
+          description: Not Found if no annotations record for the uuid path parameter is found.
         500:
           description: Internal Server Error if there was an issue processing the records.
         503:
