--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,30 +1,6 @@
 [[constraint]]
-  name = "github.com/Financial-Times/annotations-rw-neo4j"
-  version = "2.2.1"
-
-[[constraint]]
-  name = "github.com/Financial-Times/base-ft-rw-app-go"
-  version = "1.0.2"
-
-[[constraint]]
-  name = "github.com/Financial-Times/concepts-rw-neo4j"
-  version = "1.9.0"
-
-[[constraint]]
-  name = "github.com/Financial-Times/content-rw-neo4j"
-  version = "2.0.0"
-
-[[constraint]]
   name = "github.com/Financial-Times/go-fthealth"
   version = "0.4.0"
-
-[[constraint]]
-  name = "github.com/Financial-Times/go-logger"
-  version = "1.0.0"
-
-[[constraint]]
-  name = "github.com/Financial-Times/http-handlers-go"
-  version = "0.1.1"
 
 [[constraint]]
   name = "github.com/Financial-Times/neo-utils-go"
@@ -54,3 +30,11 @@
 [prune]
   go-tests = true
   unused-packages = true
+
+[[constraint]]
+  revision = "4e9e7f972a5d33e1fe6fc615eb9abe0d40de4bf7"
+  name = "github.com/Financial-Times/go-logger"
+
+[[constraint]]
+  revision = "f1cd95aa58cc18aabf1e0d18a31c9091efe15367"
+  name = "github.com/Financial-Times/upp-micro-kit"
