--- a/Dockerfile.tests
+++ b/Dockerfile.tests
@@ -1,4 +1,4 @@
-FROM golang:1.12
+FROM golang:1
 
 ENV PROJECT=public-annotations-api
 ENV REPO_PATH="github.com/Financial-Times/${PROJECT}"
@@ -8,10 +8,7 @@ COPY . $GOPATH/src/${REPO_PATH}
 RUN echo "Fetching dependencies..." \
 && git clone https://github.com/vishnubob/wait-for-it.git \
 && cd wait-for-it \
-&& mv ./wait-for-it.sh $GOPATH/src/${REPO_PATH} \
-&& curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh \
-&& cd $GOPATH/src/${REPO_PATH} \
-&& $GOPATH/bin/dep ensure -vendor-only
+&& mv ./wait-for-it.sh $GOPATH/src/${REPO_PATH}
 
 WORKDIR $GOPATH/src/${REPO_PATH}
 
