--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/golang:1.12
+      - image: golang:1
       - image: neo4j:3.4.10-enterprise
         environment:
           NEO4J_AUTH: none
@@ -17,9 +17,6 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Make go get work
-          command: sudo chown -R circleci:circleci /go/src
-      - run:
           name: Create test folder
           command: |
             mkdir -p ${CIRCLE_TEST_REPORTS}
@@ -27,17 +24,20 @@ jobs:
       - run:
           name: External Dependancies
           command: |
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            go get -u github.com/jstemmer/go-junit-report
-            go get -u github.com/mattn/goveralls
+            GO111MODULE=off go get -u github.com/jstemmer/go-junit-report
+            GO111MODULE=off go get -u github.com/mattn/goveralls
+            curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b $(go env GOPATH)/bin v1.18.0
+            git clone git@github.com:Financial-Times/upp-coding-standard.git
       - run: |
-          dep ensure -v -vendor-only
-      - run: |
-          go build -v
+          go build -mod=readonly -v
+      - run:
+          name: Run linters
+          command: |
+            golangci-lint run --new-from-rev=master --config upp-coding-standard/golangci-config/.golangci.yml
       - run:
           wget --retry-connrefused --no-check-certificate -T 60 $NEO4J_TEST_URL; curl $NEO4J_TEST_URL
       - run: |
-          go test ./... -v -tags=integration -race -cover -coverprofile=$CIRCLE_COVERAGE_REPORT/coverage.out | go-junit-report > $CIRCLE_TEST_REPORTS/junit.xml
+          go test ./... -mod=readonly -v -tags=integration -race -cover -coverprofile=$CIRCLE_COVERAGE_REPORT/coverage.out | go-junit-report > $CIRCLE_TEST_REPORTS/junit.xml
       - run: |
           goveralls -coverprofile=$CIRCLE_COVERAGE_REPORT/coverage.out -service=circle-ci -repotoken=$COVERALLS_TOKEN
       - store_test_results:
