--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,14 +22,15 @@ jobs:
             mkdir -p ${CIRCLE_TEST_REPORTS}
             mkdir -p ${CIRCLE_COVERAGE_REPORT}
       - run:
-          name: External Dependancies
+          name: External Dependencies
           command: |
-            GO111MODULE=off go get -u github.com/jstemmer/go-junit-report
-            GO111MODULE=off go get -u github.com/mattn/goveralls
+            GO111MODULE=off go get github.com/jstemmer/go-junit-report
+            GO111MODULE=off go get github.com/mattn/goveralls
             curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh| sh -s -- -b $(go env GOPATH)/bin v1.18.0
             wget https://raw.githubusercontent.com/Financial-Times/upp-coding-standard/v1.0.0/golangci-config/.golangci.yml
-      - run: |
-          go build -mod=readonly -v
+      - run:
+          name: Go Build
+          command: go build -mod=readonly -v
       - run:
           name: Run linters
           command: |
@@ -45,7 +46,7 @@ jobs:
   docker_build:
     working_directory: /public-annotations-api
     docker:
-      - image: docker:18.03
+      - image: docker:18
     steps:
       - checkout
       - setup_remote_docker
